# ESP32-OTA-Webserver

./: CMakeLists.txt  MyWiFi.c  OTAServer.c  README.md
main/: CMakeLists.txt  MyWiFi.c  OTAServer.c  OTAServer.h  main.c
main/WebsiteFiles/: index.html
